# Lattice

./: .gitignore  Cargo.toml  Makefile  README.md  demo.sh
bench/scenarios/: autoscaler_demo.sh  branch_latency.sh  storage_amplification.sh
crates/common/: Cargo.toml
crates/common/src/: blob_store.rs  error.rs  ids.rs  lib.rs  lsn.rs  page.rs  proto.rs
crates/compute-shim/: Cargo.toml
crates/compute-shim/src/: lib.rs  main.rs  page_cache.rs  pageserver_client.rs  smgr_proxy.rs
crates/control-plane/: Cargo.toml
crates/control-plane/src/: api.rs  autoscaler.rs  compute.rs  config.rs  db.rs  lib.rs  main.rs  metrics.rs
crates/control-plane/tests/: autoscaler_sim.rs
crates/pageserver/: Cargo.toml
crates/pageserver/src/: api.rs  compaction.rs  config.rs  layer.rs  lib.rs  main.rs  metrics.rs  redo.rs  store.rs  timeline.rs
crates/pageserver/tests/: merge.rs  storage_amplification.rs
crates/safekeeper/: Cargo.toml
crates/safekeeper/src/: config.rs  lib.rs  main.rs  replication.rs  wal_receiver.rs  wal_sender.rs  wal_store.rs
deploy/: Dockerfile.compute-pg  Dockerfile.compute-shim  Dockerfile.control-plane  Dockerfile.pageserver  Dockerfile.safekeeper  docker-compose.yml  entrypoint-compute.sh  prometheus.yml
deploy/grafana/provisioning/dashboards/: dashboard.yml  lattice.json
docs/: benchmarks.md  concepts.md
lattice_smgr/: Makefile  lattice_smgr--1.0.sql  lattice_smgr.c  lattice_smgr.control
scripts/: smgr-demo.sh  wal-demo.sh
