[package]
name = "lattice-compute-shim"
version.workspace = true
edition.workspace = true

[[bin]]
name = "compute-shim"
path = "src/main.rs"

[dependencies]
lattice-common = { path = "../common" }

tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
