[package]
name = "lattice-safekeeper"
version.workspace = true
edition.workspace = true

[[bin]]
name = "safekeeper"
path = "src/main.rs"

[dependencies]
lattice-common = { path = "../common" }

tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true }
